<resources>
    <string name="app_name">STUDNOTE</string>
    <string name="toAuthorization">Авторизоваться</string>
    <string name="toRegistration">Зарегестрироваться</string>
    <string name="authorization">Авторизация</string>
    <string name="create_account">Создать аккаунт</string>
    <string name="enter_login">Email</string>
    <string name="enter_password">Пароль</string>
    <string name="error_empty_field">Пожалуйста, введите данные</string>
    <string name="error_validation">Некорректные данные</string>
    <string name="unknown_exception">Неизвестная ошибка</string>
    <string name="login_exist_authorization">Такого пользователя не существует</string>
    <string name="login_exist_registration">Данная почта уже занята</string>
    <string name="registration">Регистрация</string>
    <string name="already_have_account">Уже есть аккаунт</string>
    <string name="hint">Только буквы латинского алфавита</string>
    <string name="empty" />
    <string name="note_save_dialog_title">Сохранить заметку?</string>
    <string name="note_delete_dialog_title">Удалить заметку?</string>
    <string name="save">Сохранить</string>
    <string name="cancel">Отмена</string>
    <string name="delete">Удалить</string>
    <string name="description">Запись</string>
    <string name="title">Новая заметка</string>

</resources>