<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<androidx.constraintlayout.widget.ConstraintLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		tools:context=".presentation.login.registration.RegistrationFragment">

		<com.google.android.material.appbar.AppBarLayout
			android:id="@+id/appBarAuth"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			app:elevation="5dp"
			app:layout_constraintTop_toTopOf="parent">

			<androidx.appcompat.widget.Toolbar
				android:id="@+id/toolbar"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				app:navigationIcon="@drawable/ic_back"
				app:title="@string/registration"
				app:titleTextColor="@color/white"/>

		</com.google.android.material.appbar.AppBarLayout>

		<com.google.android.material.textfield.TextInputLayout
			android:id="@+id/emailContainer"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginEnd="@dimen/spacing_16dp"
			android:layout_marginStart="@dimen/spacing_16dp"
			android:layout_marginTop="56dp"
			android:hint="@string/enter_login"
			app:errorIconDrawable="@drawable/ic_error"
			app:layout_constraintTop_toBottomOf="@+id/appBarAuth">

			<com.google.android.material.textfield.TextInputEditText
				android:id="@+id/textInputEditEmail"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:textCursorDrawable="@null"
				android:textSize="16sp"
				android:maxLines="1"/>
		</com.google.android.material.textfield.TextInputLayout>

		<com.google.android.material.textfield.TextInputLayout
			android:id="@+id/passwordContainer"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginEnd="@dimen/spacing_16dp"
			android:layout_marginStart="@dimen/spacing_16dp"
			android:layout_marginTop="40dp"
			android:hint="@string/enter_password"
			app:hintEnabled="true"
			app:helperTextTextColor="@color/purple_500"
			app:helperText="@string/hint"
			app:errorIconDrawable="@drawable/ic_error"
			app:passwordToggleEnabled="true"
			app:layout_constraintTop_toBottomOf="@+id/emailContainer">

			<com.google.android.material.textfield.TextInputEditText
				android:id="@+id/textInputEditPassword"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:textCursorDrawable="@null"
				android:lines="1"
				android:maxLength="24"/>
		</com.google.android.material.textfield.TextInputLayout>

		<com.google.android.material.button.MaterialButton
			android:id="@+id/btnRegistration"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginEnd="53dp"
			android:layout_marginStart="53dp"
			android:layout_marginTop="56dp"

			android:text="@string/toRegistration"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/passwordContainer"/>

		<TextView
			android:id="@+id/btnAuthorization"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="48dp"
			android:text="@string/already_have_account"
			android:textStyle="bold"
			android:textSize="16sp"
			android:textColor="@color/black"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/btnRegistration"/>

	</androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>