<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<androidx.constraintlayout.widget.ConstraintLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		tools:context=".presentation.title.TitleFragment">

		<ImageView
			android:id="@+id/imageTitle"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginBottom="300dp"
			android:src="@drawable/ic_image_title"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintTop_toTopOf="parent"/>

		<TextView
			android:id="@+id/titleText"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/app_name"
			android:textSize="24sp"
			android:textStyle="bold"
			android:textColor="@color/purple_500"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/imageTitle"/>

		<Button
			android:id="@+id/btnAuthorization"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginEnd="53dp"
			android:layout_marginStart="53dp"
			android:layout_marginTop="50dp"
			android:text="@string/toAuthorization"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/titleText"/>

		<Button
			android:id="@+id/btnRegistration"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginEnd="53dp"
			android:layout_marginStart="53dp"
			android:layout_marginTop="24dp"
			android:text="@string/toRegistration"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/btnAuthorization"/>

	</androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>