<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.note.edit.EditNoteFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_insetEdge="top">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:menu="@menu/menu_fragment_edit_note"
            app:navigationIcon="@drawable/ic_back"
            app:title="@string/app_name"
            app:titleTextColor="@color/white"/>

    </com.google.android.material.appbar.AppBarLayout>

    <EditText
        android:id="@+id/edit_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/spacing_16dp"
        android:layout_marginStart="@dimen/spacing_16dp"
        android:layout_marginTop="@dimen/spacing_24dp"
        android:inputType="textCapWords"
        android:text="@string/title"
        android:backgroundTint="@color/purple_500"
        android:ems="10"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"/>

    <EditText
        android:id="@+id/edit_description"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/spacing_16dp"
        android:layout_marginEnd="@dimen/spacing_16dp"
        android:layout_marginStart="@dimen/spacing_16dp"
        android:layout_marginTop="86dp"
        android:text="@string/description"
        android:inputType="textCapWords|textMultiLine"
        android:gravity="start|top"
        android:ems="10"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        style="@style/TextInputLayout"/>

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        android:indeterminate="true"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>